fix test on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,2 @@
 @import "tailwindcss";
+textarea { -webkit-overflow-scrolling: touch; }
